--- a/publi/css/style.css
+++ b/publi/css/style.css
@@ -8021,7 +8021,7 @@ h1, h2, h3, h4, h5,
   padding-top: 30px; }
   @media (max-width: 991.98px) {
     .ftco-navbar-light {
-      background: #000000 !important;
+      background: #ed969e !important;
       position: relative;
       top: 0;
       padding-top: 0;
@@ -8051,7 +8051,7 @@ h1, h2, h3, h4, h5,
     padding-bottom: .7rem;
     padding-left: 20px;
     padding-right: 20px;
-    color: #fff;
+    color: #000;/*color letra menu*/
     font-weight: 400;
     opacity: 1 !important; }
     .ftco-navbar-light .navbar-nav > .nav-item > .nav-link span {
@@ -8112,7 +8112,7 @@ h1, h2, h3, h4, h5,
     left: 0;
     top: 0;
     margin-top: -130px;
-    background: #fff !important;
+    background: #ffffff !important;
     -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
     padding: 0 15px; }
@@ -8125,7 +8125,7 @@ h1, h2, h3, h4, h5,
       color: #2e9e5b !important; }
     .ftco-navbar-light.scrolled .nav-item.cta > a {
       color: #fff !important;
-      background: #2e9e5b;
+      background: #ffc107;
       border: none !important;
       padding-top: 0.5rem !important;
       padding-bottom: .5rem !important;
@@ -9539,3 +9539,13 @@ textarea.form-control {
   100% {
     stroke-dasharray: 89, 200;
     stroke-dashoffset: -136px; } }
+
+.activando{
+  background: #0984CC;
+} 
+.containertop{
+  padding-top: 50px;
+}   
+.bordertext{
+  border: black 1px solid;
+}
